--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -6,11 +6,9 @@ WORKDIR /app
 
 # Copy the current directory contents into the container at /app
 COPY . /app
-COPY requirements.txt /app
 
 # Install any needed packages specified in requirements.txt
-RUN pip install --trusted-host pypi.python.org -r requirements.txt
-
+RUN pip install --trusted-host pypi.python.org -r /app/requirements
 # Define environment variable
 ENV TOKEN X
 ENV CHATID X
