--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 python-telegram-bot==13.7
-html2text==2020.1.16
 feedparser==6.0.8
 bs4==0.0.1
 beautifulsoup4==4.9.3
-requests[socks]==2.25.1
-
+requests[socks]==2.26.0
+fuzzywuzzy==0.18.0
+emoji==1.4.2
