--- a/.github/workflows/publish-docker-image-dev.yml
+++ b/.github/workflows/publish-docker-image-dev.yml
@@ -11,6 +11,11 @@ jobs:
         uses: actions/checkout@v2
         with:
           ref: dev
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v1
+      - name: Set up Docker Buildx
+        id: buildx
+        uses: docker/setup-buildx-action@v1
       - name: Log in to Docker Hub
         uses: docker/login-action@v1
         with:
@@ -20,4 +25,5 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           push: true
+          platforms: ${{ steps.buildx.outputs.platforms }}
           tags: rongronggg9/rss-to-telegram:dev
