--- a/.github/workflows/publish-docker-image-dev.yml
+++ b/.github/workflows/publish-docker-image-dev.yml
@@ -25,5 +25,5 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           push: true
-          platforms: ${{ steps.buildx.outputs.platforms }}
+          platforms: linux/386,linux/amd64,linux/arm/v7,linux/arm64/v8
           tags: rongronggg9/rss-to-telegram:dev
