--- a/.github/workflows/publish-docker-image-master.yml
+++ b/.github/workflows/publish-docker-image-master.yml
@@ -21,9 +21,21 @@ jobs:
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
-      - name: Push to Docker Hub
+      - name: Push to Docker Hub (x64)
         uses: docker/build-push-action@v2
         with:
           push: true
-          platforms: linux/386,linux/amd64,linux/arm/v7,linux/arm64/v8
+          platforms: linux/amd64
+          tags: rongronggg9/rss-to-telegram:latest
+      - name: Push to Docker Hub (x86)
+        uses: docker/build-push-action@v2
+        with:
+          push: true
+          platforms: linux/386
+          tags: rongronggg9/rss-to-telegram:latest
+      - name: Push to Docker Hub (arm64)
+        uses: docker/build-push-action@v2
+        with:
+          push: true
+          platforms: linux/arm64
           tags: rongronggg9/rss-to-telegram:latest
