--- a/.github/workflows/publish-docker-image-dev.yml
+++ b/.github/workflows/publish-docker-image-dev.yml
@@ -21,21 +21,9 @@ jobs:
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
-      - name: Push to Docker Hub (x64)
+      - name: Push to Docker Hub
         uses: docker/build-push-action@v2
         with:
           push: true
-          platforms: linux/amd64
-          tags: rongronggg9/rss-to-telegram:dev
-      - name: Push to Docker Hub (x86)
-        uses: docker/build-push-action@v2
-        with:
-          push: true
-          platforms: linux/386
-          tags: rongronggg9/rss-to-telegram:dev
-      - name: Push to Docker Hub (arm64)
-        uses: docker/build-push-action@v2
-        with:
-          push: true
-          platforms: linux/arm64
+          platforms: linux/amd64,linux/386,linux/arm64
           tags: rongronggg9/rss-to-telegram:dev
