--- a/.github/workflows/publish-docker-image-master.yml
+++ b/.github/workflows/publish-docker-image-master.yml
@@ -1,4 +1,4 @@
-name: Publish Docker image
+name: Publish Docker image (master)
 on:
   push:
     branches: [ master ]
@@ -11,6 +11,13 @@ jobs:
         uses: actions/checkout@v2
         with:
           ref: master
+      - name: Docker Hub README sync
+        uses: meeDamian/sync-readme@v1.0.6
+        with:
+          user: ${{ secrets.DOCKER_USERNAME }}
+          pass: ${{ secrets.DOCKER_PASSWORD }}
+          slug: ${{ secrets.DOCKER_USERNAME }}/rss-to-telegram
+          readme: ./README.md
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v1
       - name: Set up Docker Buildx
@@ -26,4 +33,4 @@ jobs:
         with:
           push: true
           platforms: linux/amd64,linux/386,linux/arm64
-          tags: rongronggg9/rss-to-telegram:latest
+          tags: ${{ secrets.DOCKER_USERNAME }}/rss-to-telegram:latest
