new command `/version`
Signed-off-by: Rongrong <15956627+Rongronggg9@users.noreply.github.com>

--- a/.github/workflows/publish-docker-image-master.yml
+++ b/.github/workflows/publish-docker-image-master.yml
@@ -11,6 +11,8 @@ jobs:
         uses: actions/checkout@v2
         with:
           ref: master
+      - name: Create .version file
+        run: echo "$(git describe --tags)@$(git branch --show-current)" > ./.version
       - name: Docker Hub README sync
         uses: meeDamian/sync-readme@v1.0.6
         with:
