fix github actions config
Signed-off-by: Rongrong <15956627+Rongronggg9@users.noreply.github.com>

--- a/.github/workflows/publish-docker-image-master.yml
+++ b/.github/workflows/publish-docker-image-master.yml
@@ -11,6 +11,7 @@ jobs:
         uses: actions/checkout@v2
         with:
           ref: master
+          fetch-depth: 0
       - name: Create .version file
         run: echo "$(git describe --tags --always)@$(git branch --show-current)" | tee ./.version
       - name: Docker Hub README sync
