--- a/.github/workflows/publish-docker-image-dev.yml
+++ b/.github/workflows/publish-docker-image-dev.yml
@@ -11,6 +11,7 @@ jobs:
         uses: actions/checkout@v2
         with:
           ref: dev
+          fetch-depth: 0
       - name: Create .version file
         run: echo "$(git describe --tags --always)@$(git branch --show-current)" | tee ./.version
       - name: Docker Hub README sync
@@ -35,4 +36,4 @@ jobs:
         with:
           push: true
           platforms: linux/amd64,linux/386,linux/arm64
-          tags: ${{ secrets.DOCKER_USERNAME }}/rss-to-telegram:latest
+          tags: ${{ secrets.DOCKER_USERNAME }}/rss-to-telegram:dev
