--- a/.github/workflows/publish-docker-image-dev.yml
+++ b/.github/workflows/publish-docker-image-dev.yml
@@ -33,5 +33,5 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           push: true
-          platforms: linux/amd64,linux/386,linux/arm64
+          platforms: linux/amd64,linux/arm64
           tags: ${{ secrets.DOCKER_USERNAME }}/rss-to-telegram:dev
