--- a/.github/workflows/publish-docker-image-dev.yml
+++ b/.github/workflows/publish-docker-image-dev.yml
@@ -33,5 +33,6 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           push: true
+          context: .
           platforms: linux/amd64,linux/arm64
           tags: ${{ secrets.DOCKER_USERNAME }}/rss-to-telegram:dev
