--- a/docker-compose.yml.sample
+++ b/docker-compose.yml.sample
@@ -6,7 +6,7 @@
 # 启动: docker-compose up -d
 # 结束：docker-compose down -v
 # 修改配置后更新配置: 先结束再启动
-# 更新到最新版本: 先结束, 再 docker-compose pull
+# 更新到最新版本: 先结束, 再 docker-compose pull，再启动
 # 查看日志：docker logs rsstt
 
 version: '3.6'
@@ -20,7 +20,7 @@ services:
       - ./config:/app/config
     environment:
       - TOKEN=1234567890:A1BCd2EF3gH45IJK6lMN7oPqr8ST9UvWX0Yz0  # 替换为你在 @BotFather 申请到的 token
-      - CHATID=1234567890  # 替换为你在 @userinfobot 获取到的 user id，或需要推送订阅的频道的用户名
+      - CHATID=1234567890  # 替换为你在 @userinfobot 获取到的 user id，或需要推送订阅的频道的用户名（带 @）
       - MANAGER=1234567890  # 替换为你的 user id
       - DELAY=300  # 订阅更新检查间隔（单位：秒）
 
