--- a/requirements.txt
+++ b/requirements.txt
@@ -11,3 +11,7 @@ lxml==4.6.3
 fasteners==0.16.3
 colorlog==6.4.1
 telegraph==1.4.1
+aiohttp==3.7.4.post0
+aiohttp-socks==0.6.0
+aiohttp-retry==2.4.6
+APScheduler==3.6.3
