--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,29 @@
-python-telegram-bot==13.7
+# telegram and telegraph
+cryptg==0.2.post4
+telethon[cryptg]==1.23.0
+telegraph==1.4.1
+
+# feed parsing
 feedparser==6.0.8
+listparser==0.18
+#pillow==8.3.2
 bs4==0.0.1
 beautifulsoup4==4.10.0
-requests[socks]==2.26.0
+lxml==4.6.3
 fuzzywuzzy==0.18.0
 emoji==1.5.0
+
+# db
 redis==3.5.3
-listparser==0.18
-lxml==4.6.3
-fasteners==0.16.3
-colorlog==6.4.1
-telegraph==1.4.1
+
+# network
+requests[socks]==2.26.0
 aiohttp==3.7.4.post0
 aiohttp-socks==0.6.0
 aiohttp-retry==2.4.6
-APScheduler==3.6.3
+python-socks[asyncio]==1.2.4
+
+# utils
+fasteners==0.16.3
+colorlog==6.4.1
+APScheduler==3.8.0
