--- a/requirements.txt
+++ b/requirements.txt
@@ -17,10 +17,15 @@ emoji==1.6.0
 redis==3.5.3
 
 # network
-aiohttp==3.7.4.post0
+aiohttp==3.7.4.post0  # aiohttp[speedups] is useless unless >=3.8.0 released: https://github.com/aio-libs/aiohttp/issues/5746
 aiohttp-socks==0.6.0
 aiohttp-retry==2.4.6
 python-socks[asyncio]==1.2.4
+
+# aiohttp speedups
+aiodns==3.0.0
+cchardet==2.1.7
+Brotli==1.0.9
 
 # utils
 fasteners==0.16.3
