--- a/docker-compose.yml.sample
+++ b/docker-compose.yml.sample
@@ -13,16 +13,14 @@ version: '3.6'
 
 services:
   main:
-    image: rongronggg9/rss-to-telegram  # 若要切换到 dev 分支，请替换为：rongronggg9/rss-to-telegram:dev
+    image: rongronggg9/rss-to-telegram:multiuser  # 若要切换分支，请替换为：rongronggg9/rss-to-telegram:分支名
     container_name: rsstt  # 如果您需要启动多个实例，请复制此文件到另外的文件夹，并修改此名字为唯一的名字
     restart: unless-stopped
     volumes:
       - ./config:/app/config
     environment:
       - TOKEN=1234567890:A1BCd2EF3gH45IJK6lMN7oPqr8ST9UvWX0Yz0  # 替换为你在 @BotFather 申请到的 token
-      - CHATID=1234567890  # 替换为你在 @userinfobot 获取到的 user id，或需要推送订阅的频道的用户名（带 @）
-      - MANAGER=1234567890  # 替换为你的 user id
-      - DELAY=300  # 订阅更新检查间隔（单位：秒）
+      - MANAGER=1234567890  # 替换为你的 user id ，可在 @userinfobot 获取
 
 # ↓------ 要停用长文自动转 telegraph，就将此区域完全注释（在每一行最前面加 # 号） ------↓ #
 # 在这里申请 access_token: https://api.telegra.ph/createaccount?short_name=rsstt&author_name=generated%20by%20rsstt&author_url=https%3a%2f%2fgithub.com%2frongronggg9%2frss-to-telegram-bot
@@ -40,6 +38,8 @@ services:
 # ↑------ 要停用长文自动转 telegraph，就将此区域完全注释（在每一行最前面加 # 号） ------↑ #
 
 # ↓------ 以下为可选参数，取消注释（删除 # 号）并对应修改来启用它们 ------↓ #
+      #- MULTIUSER=FALSE  # 关闭多用户功能
+      #- DB_URL=postgres://username:password@host:port/db_name  # 不使用 Sqlite 而使用自定义数据库，仅支持 PostgreSQL
       #- API_ID=1025907  # 若要使用自己的 API key，在 https://core.telegram.org/api/obtaining_api_id 创建，并替换前面的值
       #- API_HASH=452b0359b988148995f22ff0f4229750  # 同上
       #- IMG_RELAY_SERVER=https://rsstt-img-relay.rongrong.workers.dev/  # 自定义 Telegram 获取图片错误的时候换用的反代服务器，参见 https://github.com/rongronggg9/rsstt-img-relay
@@ -48,15 +48,3 @@ services:
       #- R_PROXY=socks5h://host.docker.internal:1080  # 获取 RSS 订阅使用的代理， 用 host.docker.internal 代替 localhost
       #- DEBUG=1  # 若要开启 debug 日志输出，请取消注释该行
 # ↑------ 以上为可选参数，取消注释（删除 # 号）并对应修改来启用它们 ------↑ #
-
-# ↓------ 若不使用 sqlite 而使用 redis，请将此行以下全部取消注释，注意数据不会被自动迁移 ------↓ #
-#      - REDISHOST=redis
-#    depends_on:
-#      - redis
-#  redis:
-#    image: redis:alpine
-#    container_name: rsstt_redis  # 如果您需要启动多个实例，请复制此文件到另外的文件夹，并修改此名字为唯一的名字
-#    restart: unless-stopped
-#    command: redis-server --appendonly yes --appendfilename "redis_db.aof" --appendfsync everysec --no-appendfsync-on-rewrite no --auto-aof-rewrite-percentage 100 --auto-aof-rewrite-min-size 64mb --aof-load-truncated yes
-#    volumes:
-#      - ./config:/data
