--- a/requirements.txt
+++ b/requirements.txt
@@ -28,4 +28,5 @@ colorlog==6.6.0
 APScheduler==3.8.1
 python-dotenv==0.19.2
 readerwriterlock==1.0.9
+multidict==5.2.0
 #uvloop==0.16.0; python_version>="3.7" and sys_platform!='win32' and sys_platform!='cygwin' and sys_platform!='cli'
