new env var `IPV6_PRIOR` to enforce IPv6 priority
Signed-off-by: Rongrong <15956627+Rongronggg9@users.noreply.github.com>

--- a/requirements.txt
+++ b/requirements.txt
@@ -22,6 +22,7 @@ aiohttp[speedups]==3.8.1
 aiohttp-socks==0.7.1
 aiohttp-retry==2.4.6
 python-socks[asyncio]==2.0.0
+aiodns==3.0.0
 
 # utils
 colorlog==6.6.0
