web: refactoring and improvements
`web.get` and `web.feed_get` now return a class obj w/ type hints, instead of a dict
"HTTP status code error" msg now contains HTTP status reason
if IPV6_PRIOR set, only retry when specified exceptions occur, instead of any exceptions

Signed-off-by: Rongrong <15956627+Rongronggg9@users.noreply.github.com>

--- a/requirements.txt
+++ b/requirements.txt
@@ -30,4 +30,5 @@ APScheduler==3.8.1
 python-dotenv==0.19.2
 readerwriterlock==1.0.9
 multidict==5.2.0
+attrs==21.4.0
 uvloop==0.16.0; python_version>="3.7" and sys_platform!='win32' and sys_platform!='cygwin' and sys_platform!='cli'
