docs: new l10n `it` (Italian, Italiano)
Signed-off-by: Rongrong <15956627+Rongronggg9@users.noreply.github.com>

--- a/.github/workflows/publish-docker-image.yml
+++ b/.github/workflows/publish-docker-image.yml
@@ -6,6 +6,10 @@ on:
       - dev
     tags:
       - '**'
+    paths-ignore:
+      - 'docs/**'
+      - '**.md'
+      - '**.sample'
 jobs:
   push_to_docker_hub:
     name: Push Docker image to Docker Hub
