fix(html_text): invalid URL
see also: https://github.com/LonamiWebs/Telethon/issues/3693

Signed-off-by: Rongrong <15956627+Rongronggg9@users.noreply.github.com>

--- a/requirements.txt
+++ b/requirements.txt
@@ -23,6 +23,7 @@ aiohttp-socks==0.7.1
 aiohttp-retry==2.4.6
 python-socks[asyncio]==2.0.3
 aiodns==3.0.0
+url-normalize==1.4.3
 
 # utils
 colorlog==6.6.0
