feat(monitor): new env var `CRON_SECOND` to determine the seconds per minute at which the feed monitoring task is executed
Signed-off-by: Rongrong <15956627+Rongronggg9@users.noreply.github.com>

--- a/docker-compose.yml.sample
+++ b/docker-compose.yml.sample
@@ -28,6 +28,7 @@ services:
 # ↓------ Advanced settings ------↓ #
 # Please read https://github.com/Rongronggg9/RSS-to-Telegram-Bot/blob/master/docs/advanced-settings.md for more details.
       #- MULTIUSER=0  # default: 1
+      #- CRON_SECOND=30  # 0-59, default: 0
       #- DATABASE_URL=postgres://username:password@host:port/db_name  # default: sqlite://config/db.sqlite3?journal_mode=OFF
       #- API_ID=1025907  # get it from https://core.telegram.org/api/obtaining_api_id
       #- API_HASH=452b0359b988148995f22ff0f4229750  # get it from https://core.telegram.org/api/obtaining_api_id
