--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,7 @@ aiographfix==0.2.2
 # feed parsing
 feedparser==6.0.8
 listparser==0.18
-#pillow==8.3.2
+pillow==9.0.1
 bs4==0.0.1
 beautifulsoup4==4.10.0
 lxml==4.7.1
