chore(build): minor fixes
Signed-off-by: Rongrong <15956627+Rongronggg9@users.noreply.github.com>

--- a/.github/workflows/publish-docker-image.yml
+++ b/.github/workflows/publish-docker-image.yml
@@ -1,9 +1,8 @@
 name: Publish Docker image
 on:
   push:
-    branches:
-      - master
-      - dev
+    branches-ignore:
+      - dependabot/**
     tags:
       - '**'
     paths-ignore:
