--- a/requirements.txt
+++ b/requirements.txt
@@ -32,4 +32,5 @@ APScheduler==3.9.1
 python-dotenv==0.19.2
 multidict==6.0.2
 attrs==21.4.0
+asyncstdlib==3.10.3
 uvloop==0.16.0; python_version>="3.7" and sys_platform!='win32' and sys_platform!='cygwin' and sys_platform!='cli'
