--- a/docker-compose.yml.sample
+++ b/docker-compose.yml.sample
@@ -33,6 +33,7 @@ services:
       #- API_ID=1025907  # get it from https://core.telegram.org/api/obtaining_api_id
       #- API_HASH=452b0359b988148995f22ff0f4229750  # get it from https://core.telegram.org/api/obtaining_api_id
       #- IMG_RELAY_SERVER=https://images.weserv.nl/?url=  # default: https://rsstt-img-relay.rongrong.workers.dev/
+      #- IMAGES_WESERV_NL=https://images.weserv.nl/  # default: https://images.weserv.nl/
       #- USER_AGENT=Mozilla/5.0 (Android 12; Mobile; rv:68.0) Gecko/68.0 Firefox/96.0  # default: RSStT/2.0 RSS Reader
       #- IPV6_PRIOR=1  # default: 0
       #- T_PROXY=socks5://172.17.0.1:1080  # Proxy used to connect to the Telegram API
