--- a/requirements.txt
+++ b/requirements.txt
@@ -33,5 +33,5 @@ python-dotenv==0.19.2
 multidict==6.0.2
 attrs==21.4.0
 asyncstdlib==3.10.3
-pylru==1.2.1
+cachetools==5.0.0
 uvloop==0.16.0; python_version>="3.7" and sys_platform!='win32' and sys_platform!='cygwin' and sys_platform!='cli'
