feat(*): env var `TABLE_TO_IMAGE` to determine should HTML tables be converted to image or just be dropped
Signed-off-by: Rongrong <15956627+Rongronggg9@users.noreply.github.com>

--- a/.env.sample
+++ b/.env.sample
@@ -30,5 +30,6 @@ TELEGRAPH_TOKEN="
 #R_PROXY=socks5://172.17.0.1:1080  # Proxy used to fetch feeds
 #PROXY_BYPASS_PRIVATE=1  # default: 0
 #PROXY_BYPASS_DOMAINS=example.com;example.net
+#TABLE_TO_IMAGE=1  # default: 0
 #DEBUG=1  # debug logging, default: 0
 # ↑------ Advanced settings ------↑ #
