--- a/requirements.txt
+++ b/requirements.txt
@@ -16,7 +16,7 @@ minify-html>=0.6.10, <=0.8.0  # 0.6.10 for Python 3.7 (however, minify-html<0.7.
 matplotlib==3.5.1
 
 # db
-asyncpg@git+https://github.com/Rongronggg9/asyncpg.git@fix/pep-621
+asyncpg==0.25.0  # asyncpg@git+https://github.com/Rongronggg9/asyncpg.git@fix/pep-621
 tortoise-orm[accel]==0.19.0
 aerich==0.6.2
 
