build(CI): allow manual triggering PyPI publishing
Signed-off-by: Rongrong <15956627+Rongronggg9@users.noreply.github.com>

--- a/.github/workflows/publish-to-pypi.yml
+++ b/.github/workflows/publish-to-pypi.yml
@@ -3,6 +3,7 @@ on:
   push:
     tags:
       - '**'
+  workflow_dispatch: ~
 jobs:
   build-n-publish:
     name: Build and publish package to PyPI
