--- a/.github/workflows/publish-to-test-pypi.yml
+++ b/.github/workflows/publish-to-test-pypi.yml
@@ -1,8 +1,11 @@
 name: Publish to Test PyPI
 on:
   push:
+    branches:
+      - dev
     paths:
       - "src/version.py"
+  workflow_dispatch: ~
 jobs:
   build-n-publish:
     name: Build and publish package to Test PyPI
