--- a/.github/workflows/publish-docker-image.yml
+++ b/.github/workflows/publish-docker-image.yml
@@ -9,8 +9,9 @@ on:
       - 'docs/**'
       - '**.md'
       - '**.sample'
+
 jobs:
-  push_to_docker_hub:
+  push:
     name: Push Docker image to Docker Hub
     runs-on: ubuntu-latest
     steps:
@@ -18,6 +19,16 @@ jobs:
         uses: actions/checkout@v3
         with:
           fetch-depth: 0
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v1
+      - name: Set up Docker Buildx
+        id: buildx
+        uses: docker/setup-buildx-action@v1
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
       - name: Set Docker meta
         id: meta
         uses: docker/metadata-action@v3
@@ -31,23 +42,6 @@ jobs:
             type=pep440,pattern={{major}}.{{minor}}
             type=pep440,pattern={{major}}
             type=raw,value=latest,enable=${{ endsWith(github.ref, 'master') }}
-      - name: Docker Hub README sync
-        uses: meeDamian/sync-readme@v1.0.6
-        with:
-          user: ${{ secrets.DOCKER_USERNAME }}
-          pass: ${{ secrets.DOCKER_PASSWORD }}
-          slug: ${{ secrets.DOCKER_USERNAME }}/rss-to-telegram
-          readme: ./README.md
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v1
-      - name: Set up Docker Buildx
-        id: buildx
-        uses: docker/setup-buildx-action@v1
-      - name: Log in to Docker Hub
-        uses: docker/login-action@v1
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
       - name: Push to Docker Hub
         uses: docker/build-push-action@v2
         with:
@@ -58,3 +52,15 @@ jobs:
           labels: ${{ steps.meta.outputs.labels }}
           cache-from: type=gha,scope=docker-release
           cache-to: type=gha,scope=docker-release,mode=max
+
+  description:
+    name: Update repository description on Docker Hub
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - name: Update Docker Hub description
+        uses: peter-evans/dockerhub-description@v3
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+          repository: ${{ secrets.DOCKER_USERNAME }}/rss-to-telegram
