--- a/.env.sample
+++ b/.env.sample
@@ -31,5 +31,8 @@ TELEGRAPH_TOKEN="
 #PROXY_BYPASS_PRIVATE=1  # default: 0
 #PROXY_BYPASS_DOMAINS=example.com;example.net
 #TABLE_TO_IMAGE=1  # default: 0
+#TRAFFIC_SAVING=1  # default: 0
+#LAZY_MEDIA_VALIDATION=1  # default: 0
+#MANAGER_PRIVILEGED=1  # default: 0
 #DEBUG=1  # debug logging, default: 0
 # ↑------ Advanced settings ------↑ #
