chore(deps): migrate from fuzzywuzzy to rapidfuzz
Signed-off-by: Rongrong <i@rong.moe>

--- a/requirements.txt
+++ b/requirements.txt
@@ -9,7 +9,7 @@ listparser==0.18
 pillow==9.1.0
 beautifulsoup4==4.11.1
 lxml==4.8.0
-fuzzywuzzy==0.18.0
+rapidfuzz==2.0.11
 emoji==1.7.0
 minify-html>=0.6.10, <=0.8.0  # 0.6.10 for Python 3.7 (however, minify-html<0.7.0 comes with no arm64 support)
 matplotlib==3.5.2
