feat(env): `NO_UVLOOP` to force disable uvloop
https://github.com/MagicStack/uvloop/issues/471
https://github.com/aio-libs/aiohttp/issues/6762
Signed-off-by: Rongrong <i@rong.moe>

--- a/docker-compose.yml.sample
+++ b/docker-compose.yml.sample
@@ -44,5 +44,6 @@ services:
       #- TRAFFIC_SAVING=1  # default: 0
       #- LAZY_MEDIA_VALIDATION=1  # default: 0
       #- MANAGER_PRIVILEGED=1  # default: 0
+      #- NO_UVLOOP=1  # default: 0
       #- DEBUG=1  # debug logging, default: 0
 # ↑------ Advanced settings ------↑ #
