--- a/.env.sample
+++ b/.env.sample
@@ -34,5 +34,6 @@ TELEGRAPH_TOKEN="
 #TRAFFIC_SAVING=1  # default: 0
 #LAZY_MEDIA_VALIDATION=1  # default: 0
 #MANAGER_PRIVILEGED=1  # default: 0
+#NO_UVLOOP=1  # default: 0
 #DEBUG=1  # debug logging, default: 0
 # ↑------ Advanced settings ------↑ #
