--- a/.env.sample
+++ b/.env.sample
@@ -35,5 +35,6 @@ TELEGRAPH_TOKEN="
 #LAZY_MEDIA_VALIDATION=1  # default: 0
 #MANAGER_PRIVILEGED=1  # default: 0
 #NO_UVLOOP=1  # default: 0
+#NO_MULTIPROCESSING=1  # default: 0
 #DEBUG=1  # debug logging, default: 0
 # ↑------ Advanced settings ------↑ #
