chore(*): re-enable WAL for SQLite
Signed-off-by: Rongrong <i@rong.moe>

--- a/.env.sample
+++ b/.env.sample
@@ -19,7 +19,7 @@ TELEGRAPH_TOKEN="
 # ↓------ Advanced settings ------↓ #
 #MULTIUSER=0  # default: 1
 #CRON_SECOND=30  # 0-59, default: 0
-#DATABASE_URL=postgres://username:password@host:port/db_name  # default: sqlite://config/db.sqlite3?journal_mode=OFF
+#DATABASE_URL=postgres://username:password@host:port/db_name  # default: sqlite://path/to/config/db.sqlite3
 #API_ID=1025907  # get it from https://core.telegram.org/api/obtaining_api_id
 #API_HASH=452b0359b988148995f22ff0f4229750  # get it from https://core.telegram.org/api/obtaining_api_id
 #IMG_RELAY_SERVER=https://images.weserv.nl/?url=  # default: https://rsstt-img-relay.rongrong.workers.dev/
