fix(parsing): malformed HTML causes RecursionError
this is a workaround for upstream issue
https://github.com/wilsonzlin/minify-html/issues/86#issuecomment-1237677552

Signed-off-by: Rongrong <i@rong.moe>

--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ rapidfuzz==2.6.1
 emoji==2.0.0
 minify-html==0.6.10; python_version<="3.7"  # 0.6.10 for Python 3.7 (amd64 only)
 minify-html==0.10.0; python_version>="3.8"  # Python 3.8+ (aarch64/amd64 only)
+minify-html-onepass==0.10.0; python_version>="3.8"  # Python 3.8+ (aarch64/amd64 only)
 matplotlib==3.5.3
 
 # db
