--- a/.github/workflows/rough-test.yml
+++ b/.github/workflows/rough-test.yml
@@ -9,10 +9,12 @@ on:
 jobs:
   test:
     strategy:
+      fail-fast: false
       matrix:
         version: [ '3.7', '3.8', '3.9', '3.10' ]
-    name: Python ${{ matrix.version }}
-    runs-on: ubuntu-latest
+        os: [ ubuntu-latest, macos-latest, windows-latest ]
+    name: Python ${{ matrix.version }} on ${{ matrix.os }}
+    runs-on: ${{ matrix.os }}
     steps:
       - name: Check out the repo
         uses: actions/checkout@v3
@@ -32,4 +34,4 @@ jobs:
           echo 'TOKEN=test' > .env
           echo 'MANAGER=-1' >> .env
           echo 'DEBUG=1' >> .env
-          RAPIDFUZZ_IMPLEMENTATION=cpp python3 -u telegramRSSbot.py
+          python3 -u telegramRSSbot.py
