--- a/.github/workflows/rough-test.yml
+++ b/.github/workflows/rough-test.yml
@@ -27,7 +27,7 @@ jobs:
           cache: 'pip'
       - name: Install dependencies
         run: |
-          python -m pip install --upgrade pip
+          pip install --upgrade pip wheel setuptools
           pip install -r requirements.txt
       - name: Test
         run: |
