build(*)!: new Docker image tag `exp-deps`
This tag bumps some dependencies to their snapshot version. The old
`feedparser-enhanced` tag has been removed.

Affected dependencies:
feedparser
telethon

Signed-off-by: Rongrong <i@rong.moe>

--- a/.github/workflows/pr-test-docker-build.yml
+++ b/.github/workflows/pr-test-docker-build.yml
@@ -10,8 +10,8 @@ jobs:
     strategy:
       matrix:
         platform: [ 'linux/amd64', 'linux/arm64' ]
-        fpe: [ 0, 1 ]
-    name: ${{ matrix.platform }} - FPE=${{ matrix.fpe }}
+        EXP_DEPS: [ 0, 1 ]
+    name: ${{ matrix.platform }} - EXP_DEPS=${{ matrix.EXP_DEPS }}
     runs-on: ubuntu-latest
     steps:
       - name: Check out the repo
@@ -28,6 +28,6 @@ jobs:
         with:
           push: false
           context: .
-          build-args: FEEDPARSER_ENHANCED=${{ matrix.fpe }}
+          build-args: EXP_DEPS=${{ matrix.EXP_DEPS }}
           platforms: ${{ matrix.platform }}
           cache-from: type=gha,scope=docker-release
