chore(setup.cfg): update metadata
Signed-off-by: Rongrong <i@rong.moe>

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,11 +1,11 @@
 [metadata]
 name = rsstt
 author = Rongrong
-author_email = Rongronggg9@outlook.com
+author_email = i@rong.moe
 description = A Telegram RSS bot that cares about your reading experience
 long_description = file: README.md
 long_description_content_type = text/markdown
-license = AGPLv3+
+license = OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
 platforms = Linux, Windows, MacOS
 url = https://github.com/Rongronggg9/RSS-to-Telegram-Bot
 project_urls =
