feat(*): new env var `HTTP_TIMEOUT`
Signed-off-by: Rongrong <i@rong.moe>

--- a/.env.sample
+++ b/.env.sample
@@ -30,6 +30,7 @@ TELEGRAPH_TOKEN="
 #R_PROXY=socks5://172.17.0.1:1080  # Proxy used to fetch feeds
 #PROXY_BYPASS_PRIVATE=1  # default: 0
 #PROXY_BYPASS_DOMAINS=example.com;example.net
+#HTTP_TIMEOUT=30  # default: 12
 #TABLE_TO_IMAGE=1  # default: 0
 #TRAFFIC_SAVING=1  # default: 0
 #LAZY_MEDIA_VALIDATION=1  # default: 0
