--- a/.env.sample
+++ b/.env.sample
@@ -31,6 +31,8 @@ TELEGRAPH_TOKEN="
 #PROXY_BYPASS_PRIVATE=1  # default: 0
 #PROXY_BYPASS_DOMAINS=example.com;example.net
 #HTTP_TIMEOUT=30  # default: 12
+#HTTP_CONCURRENCY=0  # default: 1024
+#HTTP_CONCURRENCY_PER_HOST=0  # default: 16
 #TABLE_TO_IMAGE=1  # default: 0
 #TRAFFIC_SAVING=1  # default: 0
 #LAZY_MEDIA_VALIDATION=1  # default: 0
