ci(dependabot): set pull requests limit to 16
Signed-off-by: Rongrong <i@rong.moe>

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -10,8 +10,10 @@ updates:
     target-branch: "dev"
     schedule:
       interval: "daily"
+    open-pull-requests-limit: 16
   - package-ecosystem: "github-actions"
     directory: "/"
     target-branch: "dev"
     schedule:
       interval: "daily"
+    open-pull-requests-limit: 16
