feat(aio_helper): tunable niceness
Signed-off-by: Rongrong <i@rong.moe>

--- a/.env.sample
+++ b/.env.sample
@@ -39,5 +39,6 @@ TELEGRAPH_TOKEN="
 #MANAGER_PRIVILEGED=1  # default: 0
 #NO_UVLOOP=1  # default: 0
 #MULTIPROCESSING=1  # default: 0
+#EXECUTOR_NICENESS_INCREMENT=5  # default: 2
 #DEBUG=1  # debug logging, default: 0
 # ↑------ Advanced settings ------↑ #
