--- a/.github/workflows/rough-test.yml
+++ b/.github/workflows/rough-test.yml
@@ -11,7 +11,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        version: [ '3.9', '3.10', '3.11' ]
+        version: [ '3.9', '3.10', '3.11', '3.12' ]
         os: [ ubuntu-latest, macos-latest, windows-latest ]
     name: Python ${{ matrix.version }} on ${{ matrix.os }}
     runs-on: ${{ matrix.os }}
